--- a/me.css
+++ b/me.css
@@ -110,7 +110,7 @@ body.page-template-page-fullsingle-me {
   line-height: 60px;
   letter-spacing: -0.5px;
   color: #999999;
-  background-image: url("../../images/background.jpg");
+  background-image: url("https://f.top4top.io/p_17551iwte1.jpg");
   background-position: center center;
   background-size: cover; }
   body.page-template-page-fullsingle-me p {
