--- a/bd-coming-soon.css
+++ b/bd-coming-soon.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Karla', sans-serif;
-  background-image: url("../images/bg.jpg");
+  background-image: url("https://i.ibb.co/B6v58vY/bg.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
